--- a/sites/all/themes/blogger_theme/style.css
+++ b/sites/all/themes/blogger_theme/style.css
@@ -1,6 +1,9 @@
-/*
-www.devsaran.com
-*/
+/*12/29/17*/
+
+
+
+
+/*12/29/17 END*/
 
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic");
 
@@ -1128,7 +1131,7 @@ figure.effect-lily img {
 }
 
 figure.effect-lily img.googleplay-logo {
-  max-width:180px;
+  max-width:50px !important;
 }
 
 figure.effect-lily figcaption {
@@ -1181,6 +1184,9 @@ figure.effect-lily:hover p {
   transition-delay: 0.05s;
   -webkit-transition-duration: 0.35s;
   transition-duration: 0.35s;
+  position: relative;
+  right: 15px;
+
 }
 
 
@@ -1227,7 +1233,8 @@ figure.effect-lily:hover p {
     background-color: rgba(0,0,0,.7);
   }
     img.googleplay-logo {
-    max-height:40px;
+    min-height:50px;
+    max-height:50px;
     margin-left:0 !important;
     padding-left:0 !important;
     float:left;
@@ -1244,7 +1251,7 @@ figure.effect-lily:hover p {
     transition:.5s;
     border-radius:5px;
     margin-left:0 !important;
-    padding: 5px;
+    padding: 0px !important;
     max-height:50px !important;
     float:left;
   }
@@ -1278,6 +1285,35 @@ figure.effect-lily:hover p {
     background-color: rgba(0,0,0,.7);
     max-height:50px !important;
   }
+  
+  img.spotify-logo {
+    margin-left:0 !important;
+    padding-left:0 !important;
+    max-width:100% !important;
+  }
+  a.spotify-link {
+    display:inline-block;
+    background-color: rgba(0,0,0,.3);
+    margin:0 10px 0 0!important;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+  /* ...and now for the proper property */
+    transition:.5s;
+    border-radius:5px;
+    margin-left:0 !important;
+    padding: 12px 5px 0px 5px !important;
+    max-width:66px;
+    max-height:50px !important;
+    min-height:38px !important;
+    float:left;
+  }
+    a.spotify-link:hover {
+    background-color: rgba(0,0,0,.7);
+    max-height:50px !important;
+  }
+  
     img.directdownload-logo {
     margin-left:0 !important;
     padding-left:0 !important;
@@ -1434,7 +1470,7 @@ figure.effect-lily:hover p {
     margin:auto;
   }
   .mobile-icon {
-    width: 25%;
+    width: 20%;
     float: left;
   }
   .mobile-icon img {
@@ -1477,7 +1513,8 @@ figure.effect-lily:hover p {
     font-size:20px;
   }
   .mobile-icon {
-    width:25%;
+    width:19%;
+    margin-left:1%;
     float:left;
     background-color: white;
   }
@@ -1489,7 +1526,7 @@ figure.effect-lily:hover p {
     display: block;
   }
   p.tags-label {
-    padding-top: 75px;
+    /*padding-top: 75px;*/
     margin-bottom:0;
   }
   #wrap {
@@ -1545,5 +1582,12 @@ figure.effect-lily:hover p {
   #footer-wrap {
     margin-bottom:50px;
     margin-top:10px;
+  }
+  .field-name-field-episode-tags {
+    display:none;
+  }
+  
+  .download-icons-wrap {
+    min-height: 70px !important;
   }
 }
